--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document<%= env %></title>
+    <title>Realworld React<%= env %></title>
     <link
       rel="stylesheet"
       href="//demo.productionready.io/main.css"
